# pi-birthday-bench

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: github-issues.md  project-plan.md
scripts/: bootstrap-github.ps1
src/: backend.rs  date.rs  job.rs  lib.rs  main.rs  pi.rs  result.rs  search.rs  system_info.rs
tests/: cli_backends.rs  cli_json.rs  cli_progress.rs
