[package]
name = "pi-birthday-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
gmp-mpfr-sys = { version = "1.7", default-features = false, features = ["use-system-libs"] }
rug = { version = "1.30", default-features = false, features = ["integer"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
