[package]
name = "pi-birthday-bench"
version = "0.1.0"
edition = "2021"
default-run = "pi-birthday-bench"

[features]
default = []
gui = ["dep:eframe", "dep:serde_json", "dep:wgpu"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33", optional = true, default-features = false, features = ["default_fonts", "wgpu"] }
gmp-mpfr-sys = { version = "1.7", default-features = false, features = ["use-system-libs"] }
rug = { version = "1.30", default-features = false, features = ["integer"] }
serde_json = { version = "1.0", optional = true }
wgpu = { version = "27.0", optional = true, default-features = false, features = ["dx12"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
