[package]
name = "pi-birthday-bench"
version = "0.1.0"
edition = "2021"
default-run = "pi-birthday-bench"

[features]
default = []
gui = ["dep:eframe", "dep:wgpu"]

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]
test = false
bench = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33", optional = true, default-features = false, features = ["default_fonts", "wgpu"] }
gmp-mpfr-sys = { version = "1.7", default-features = false, features = ["use-system-libs"] }
rug = { version = "1.30", default-features = false, features = ["integer"] }
serde_json = "1.0"
# eframe enables wgpu, but with default-features disabled it does not select a native backend.
# Keep this direct optional dependency so the Windows GUI has a DX12 backend at runtime.
wgpu = { version = "27.0", optional = true, default-features = false, features = ["dx12"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
